Updated project report

--- a/Enron Dataset investigation.ipynb
+++ b/Enron Dataset investigation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project goal\n",
+    "## 1. Project goal\n",
     "My personal target in this project is to identify at least one more person than was in the official list of the Enron fraud investigation. I am well aware that statistical methods will not be sufficient as prove in a fraud case, so the name will not be published - however, i am interested in how this very simple information like financial information and email network information as given here, can uncover connections.\n",
     "Out of personal interest, i also want to see how far I can come with non-Neural-Network methods. As long as there is no PCA used, the non-NN-methods frequently are able to give insight.\n",
     "\n"
@@ -68,13 +68,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature selection\n",
+    "## 2. Feature selection\n",
     "#### how did i pick them\n",
+    "The feature selection was the main part of the project - i did it all the way right up to the end. You will find three main \"batches\" of feature selection:\n",
+    "1. In the first attempt, use them all and choose some algorithms.\n",
+    "2. Then engineer my own features and see how the algorithms behave.\n",
+    "3. Finally, combine the best of feature selection and algorithm selection for the result.\n",
+    "\n",
     "In a first attempt, i selected all financial information available (after all, why committing fraud if you have no interest doing so?); and relational information from the email data: Emails sent to and from POI; and emails sent to this person with an POI in copy (indicating probably that the sender thinks there is a relation)\n",
     "\n",
-    "It is worth noting that most of the features are quite sparse. As example, for the financial information, not everybody receives a bonus paid in shares; and probably not everybody of those persons has their shares bonus published. The same goes for most of the features, they are sparse. So i need every feature i can get.\n",
-    "\n",
-    "Next I made a correlation matrix, not with the label, but internally - to see if there is redundant data that could be combined or removed.\n",
+    "Next I made a correlation matrix to see if there is redundant data that could be combined or removed.\n",
     "\n",
     "The detailed list is as follows\n",
     "\n",
@@ -93,7 +96,7 @@
     "\n",
     "<img src=\"Correlation_matrix.png\">\n",
     "\n",
-    "It can be seen in the correlation matrix that nearly all features have a correlation to the poi feature, which is good. In first place, i would try and use them all. \n",
+    "It can be seen in the correlation matrix that nearly all features have a correlation to the poi feature, which is good. \n",
     "However, the first three stock option features (excercised stock options, total stock value, restricted stock) are so deeply correlated that it may be interesting to remove some.\n",
     "The email features (last five lines) are also very much in line with each other.\n",
     "\n",
@@ -101,7 +104,7 @@
     "Coming back to the sparsity problem: I was experimenting with leaving those features out of the estimator, but the results have not been better, so they stay in. I checked with the final algorithm selected in the last part of this project, if a removal of those data fields has an influence on the performance.\n",
     "``` \n",
     "results for leaving some sparse data out\n",
-    "All features, SVC: F1=0.488\n",
+    "All features, SVC: F1=0.488  # This is the winner\n",
     "w/o loan_advances, SVC: F1=0.487\n",
     "w/o restricted_stock_deferred, SVC: F1=0.479\n",
     "w/o director_fees, SVC: F1=0.481\n",
@@ -123,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model selection\n",
+    "## 3. Model selection\n",
     "I was testing AdaBoost, SVC, Random Forest Classifier and Decision Tree Classifier.\n",
     "All four of them are good classifiers. Only the SVC needs some preprocessing, which is also nice: The more i can do with the original data, the less i am in danger of accidentally introducing a failure.\n",
     "\n",
@@ -288,6 +291,9 @@
     "## 5. final validation\n",
     "Having gained the experience now, i was re-fitting the same four algorithms on the original data again, now with the best parameters and features available. Also, i found out that i forgot to set \"class_weight\" to balanced in the first try. Finally having learned now that i can set the base estimator of AdaBoost to something i like, i did use the most successful variant of a Decision Tree in Adaboost. Then i put the StratifiedShuffleSplit to 1000 for the GridSearch; so that it was exactly like in the udacity tester code and retuned all estimators. \n",
     "\n",
+    "**why this extra-validation?**\n",
+    "This is a necessary step: Without the validation from the Udacity tester code, i can never be sure that i did not overfit my estimator to the wrong metric. I was choosing features and training the algorithms all the way long with a simple F1 scorer and a simplified (compared to the Udacity) stratifiedShuffleSplit, in order to save time. It can of course happen that i was not finding the best parameters or i was overfitting somewhere. So this step here is necessary to confirm that what i did is good the way Udacity is measuring.\n",
+    "\n",
     "The validation was done each time with the Udacity tester code and recorded in a table. Marked in red were all algorithms that didn't fulfill the Udacity requirements of at least 0.3 Precision and Recall; marked in green are the top three results in each column.\n",
     "\n",
     "Nearly as afterthought, i was letting the other algorithms use the DecisionTree choice of features, just to see if they would behave better or not.\n",
@@ -313,15 +319,28 @@
     " 'exercised_stock_options_x_deferral_payments']\n",
     "```\n",
     "\n",
-    "Those last three features are the ones derived from the experiment with the artificial generated feature list.\n",
-    "On this list, an SVC using the sigmoid function, balanced class weight, C=600, gamma = 0.01, i achieved with the Udacity tester code:\n",
+    "Those last three features are the ones derived from the experiment with the 1200 artificial features.\n",
+    "On this list, with an SVC *without PCA*, using the sigmoid function, balanced class weight, C=600, gamma = 0.01, i achieved with the Udacity tester code:\n",
     "\n",
-    "Accuracy: 0.77487       \n",
-    "Precision: 0.34851      \n",
+    "* Accuracy: 0.77487       \n",
+    "* Precision: 0.34851      \n",
     "Recall: 0.79200 \n",
-    "F1: 0.48403     \n",
+    "F1: 0.48403\n",
     "F2: 0.63133\n",
-    "\n"
+    "\n",
+    "As i didn't optimize for the accuracy but for the F1 score, my top result for it is 0.77: that means 0.10 less than the benchmark for this exercise. However, i am quite happy with a recall rate of 0.79 and a precision of 0.35 - those results are more important than the pure accuracy, given that this work could point it's finger at certain persons."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Two evaluation metrics\n",
+    "Personally i think that none of this is going to be usable for a new case: As it stands, the precision of 0.34 indicates that my algorithm points out two non-POI's for every POI marked in the original data. A deep investigation would be necessary now to see if those two extra are a really great result of my work and they need to be investigated by the justice system, or if the data is just not good enough and i point my finger to a lot of innocents.\n",
+    "\n",
+    "Similarly, a recall rate of 79% means that my algorithm finds 79% of the POI's in the dataset. Having 18 POI's means it finds 14, and 4 get away. At least the recall rate should be beyond 90% before doing any serious justice action on this. However, i tried to train my algorithm to that metric first, with the result that both accuracy and precision were going so far down that it wasn't usable.\n",
+    "\n",
+    "(Wikipedia has a nice explanation) Those two metrics show that it is not so easy to identify fraud from email and financial data only. It would be interesting to see how well a neural net performs here - whereas, it is somewhere between difficult and impossible to find the reasons for a decision in the net; which is of prime importance in the justice. An SVC with a sigmoid decision function is as close as it gets to a Neural Net without actually setting one up."
    ]
   },
   {
@@ -329,21 +348,28 @@
    "metadata": {},
    "source": [
     "## Conclusion:\n",
-    "This was like shopping. The first try was the best. \n",
+    "Having tried and tested lots values in the hyperparameter space, having played around a lot with the features, this project showed me a few interesting things:\n",
     "\n",
-    "As i didn't optimize for the accuracy, my top result for it is 0.76, that means 0.10 less than the benchmark for this exercise. However, i am quite happy with a recall rate of 0.73 and a precision of 0.33 - those results are more important than the pure accuracy, given that this result point it's finger at certain persons. Personally i think that none of this is going to be usable for a new case: I can't tell if my POI indicator has a precision of 0.33 because only one out of three POI have been identified in the Enron Fraud Case, or because the sparse data is not allowing a better prediction.\n",
-    "Similarly, a recall rate of 73% means that i let a quarter of the POI's slip... I am not yet happy at all."
+    "* I can only increase recall and precision at the same time, when i find a much better feature in the original bulk of the e-mails. This is a work i will not do in the frame of this project.\n",
+    "* I just didn't want to stop as i had the feeling that it could be yet a little bit better. And then some.\n",
+    "* Behind each of the sklearn \"algo's\" there is a lot of things yet to learn - using the decision tree for feature selection was interesting, also using K-Best, or observing the behavior of PCA generated features. Especially PCA could be quite powerful if one feels the need to reduce a big feature space. Here, with 20 features, it was not necessary.\n",
+    "* The coding for this project was... interesting. As i had to go forward and backward in the code, constantly changing parts of it and in the go deleting traces of before, the poi_id.py now contains just the traces of the best approach. There is poi_id_mass_test that contains a lot more traces that stem in part from the data investigation and in part from the search for good additional features. Most of the code there is commented, because i was activating or deactivating parts of it as needed.\n",
+    "* The one thing i did not do was writing a scorer of my own. Fitting to the question of Udacity, i would make a scorer that has a big penalty function for Precision or Recall below 0.3; and as soon as it is above 0.3, an extra bonus for each additional point of accuracy. That could actually be interesting, having a 5 minutes video during the course about how to do that.\n",
+    "\n",
+    "It was definitely interesting and leaves me questioning two things:\n",
+    "\n",
+    "* Natural data is dirty. How can we do things like palantir's predictive policing or like COMPAS (used for deciding prison sentences), without putting lots of innocents in risk of being mis-estimated?\n",
+    "* And more personally: how i would fare if attacking the one or other Kaggle dataset - I will see."
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### two evaluation metrics\n",
-    "Even if my code was optimized for the F1 score, it really means i was optimizing for low failure rates. Having a Precision of 0.33 means that this algorithm points at two innocents for every POI that it identifies. \n",
-    "Having a Recall of 73% means, it catches 73% of the existing POI's. ([Wikipedia has a nice explanation](https://en.wikipedia.org/wiki/Precision_and_recall))\n",
-    "Those two metrics show that it is not so easy to identify fraud from email and financial data only. It would be interesting to see how well a neural net performs here - whereas, it is somewhere between difficult and impossible to find the reasons for a decision in the net; which is of prime importance in the justice."
-   ]
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
