Project as given to Udacity, second review

--- a/Enron Dataset investigation.ipynb
+++ b/Enron Dataset investigation.ipynb
@@ -324,9 +324,9 @@
     "\n",
     "* Accuracy: 0.77487       \n",
     "* Precision: 0.34851      \n",
-    "Recall: 0.79200 \n",
-    "F1: 0.48403\n",
-    "F2: 0.63133\n",
+    "* Recall: 0.79200 \n",
+    "* F1: 0.48403\n",
+    "* F2: 0.63133\n",
     "\n",
     "As i didn't optimize for the accuracy but for the F1 score, my top result for it is 0.77: that means 0.10 less than the benchmark for this exercise. However, i am quite happy with a recall rate of 0.79 and a precision of 0.35 - those results are more important than the pure accuracy, given that this work could point it's finger at certain persons."
    ]
